<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Träwelldroid</string>
    <string name="ok">OK</string>
    <string name="abort">Abort</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_stop">Stop / Ril100</string>
    <string name="login">Log in</string>
    <string name="title_dashboard">Home</string>
    <string name="title_active_checkins">En route</string>
    <string name="title_user">Profile</string>
    <string name="title_search_connection">Search connection</string>
    <string name="title_select_destination">Select destination</string>
    <string name="display_points">%1$d points</string>
    <string name="display_travel_time_minutes">%1$dmin</string>
    <string name="display_travel_time_hours_minutes">%1$dh %2$dmin</string>
    <string name="display_travel_time_days_hours_minutes">%1$dd %2$dh %3$dmin</string>
    <string name="display_average_speed">%1$.2f km/h</string>
    <string name="where_are_you">Where are you?</string>
    <string name="search">Search</string>
    <string name="next_station">Next station: %1$s</string>
    <string name="from_station">dep %1$s</string>
    <string name="check_in_user_time" translatable="false">%1$s, %2$s</string>
    <string name="logout">Log out</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="locate">Locate</string>
    <string name="line_destination">%1$s to %2$s</string>
    <string name="check_in">Check-In</string>
    <string name="edit_status">Edit status</string>
    <string name="change_destination">Change destination</string>
    <string name="status_message">Status message</string>
    <string name="departures_at">Departures at %1$s</string>
    <string name="error_credentials">Please check your credentials</string>
    <string name="error_logout">Logout was not successful!</string>
    <string name="error_missing_location_permission">For using this feature you need to enable the location permission in your device settings.</string>
    <string name="username_or_email">Username or email address</string>
    <string name="check_in_successful">You are checked in!</string>
    <string name="check_in_failure">There was an error when checking you in.</string>
    <string name="check_in_conflict">You are already checked in another connection!</string>
    <string name="title_select_date">Select the departure date</string>
    <string name="title_select_time">Select the departure time</string>
    <string name="title_select_visibility">Select the desired status visibility</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_unlisted">Unlisted</string>
    <string name="visibility_followers">Just for followers</string>
    <string name="visibility_private">Just for you</string>
    <string name="visibility_only_authenticated">Only authenticated users</string>
    <string name="title_select_business">Select the desired business type</string>
    <string name="travel_purpose">Travel purpose</string>
    <string name="business_private">Private</string>
    <string name="business">Business</string>
    <string name="business_commute">Commute</string>
    <string name="set_homeland">Set homeland station</string>
    <string name="set_homeland_success">Your homeland station now is set to %1$s.</string>
    <string name="home">Home</string>
    <string name="delete_status">Are you sure that you want to delete this check-in?</string>
    <string name="delete">Delete</string>
    <string name="status_delete_success">Your check-in was successfully deleted.</string>
    <string name="status_delete_failure">There was an error when deleting your check-in.</string>
    <string name="co_travellers">Also in your connection:</string>
    <string name="no_departures">There are no available departures for this time.</string>
    <string name="product_type_regional">Regional</string>
    <string name="product_type_express">Express</string>
    <string name="product_type_bus">Bus</string>
    <string name="product_type_suburban">Suburban</string>
    <string name="product_type_subway">Subway</string>
    <string name="product_type_tram">Tram</string>
    <string name="product_type_ferry">Ferry</string>
    <string name="product_type_taxi">Taxi</string>
    <string name="product_type_regional_express">Regional express</string>
    <string name="product_type_national_express">National express</string>
    <string name="product_type_national">Regional express</string>
    <string name="data_loading" tools:ignore="TypographyEllipsis">Loading data…</string>
    <string name="status_details">Status details</string>
    <string name="title_statistics">Statistics</string>
    <string name="date_range" translatable="false">%1$s - %2$s</string>
    <string name="title_select_statistics_date_range">Select the date range for your statistics</string>
    <string name="transport_types">Transport types</string>
    <string name="operators">Operators</string>
    <string name="travel_time">Travel time</string>
    <string name="check_in_count">Check-in count</string>
    <string name="title_notifications">Notifications</string>
    <string name="notifications_not_implemented_text">
        This feature is currently not implemented. Please use the Träwelling website to see
        or clear your notifications.
    </string>
    <string name="request_url_verification">Open URLs</string>
    <string name="request_url_verification_text">
        Träwelldroid can now open URLs from traewelling.de. Would you like to set up?
        This also can be changed at any time in the system settings.
    </string>
    <string name="request_url_login_verification">
        For using Träwelldroid you need to enable that Träwelldroid can open links.
        Please do this in the settings.
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_also_check_in">Also check-in</string>
    <string name="title_select_event">Select event</string>
    <string name="hint_event_missing">Missing an event? You can submit your suggestion on the Träwelling website! https://traewelling.de/events</string>
    <string name="cancelled">cancelled</string>
    <string name="reset_selection">Reset selection</string>
    <string name="no_event_check_in">No event check-in</string>
    <string name="settings">Settings</string>
    <string name="jwt_expiration">Login expires on: %1$s</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="renew_login">Renew login</string>
    <string name="hashtag" translatable="false">Hashtag</string>
    <string name="default_hashtag_text">You can define a default hashtag which will be automatically added to your check-ins.</string>
    <string name="renew_login_failed">The renew of the login failed. Please consider signing yourself off and on again for renewing your login.</string>
    <string name="renew_login_success">Login renewed!</string>
    <string name="store_hashtag">Store hashtag</string>
    <string name="emoji">Emoji Pack</string>
    <string name="emoji_text">You can change the emoji pack for this app</string>
    <string name="information">Information</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="view_on_github">View project on GitHub</string>
    <string name="legal">Imprint and privacy</string>
    <string name="title_edit">Edit</string>
    <string name="point_reason_good_enough">
        Because you checked in a little too late, you didn\'t receive full points. Try checking in
        shortly before departure or while travelling.
    </string>
    <string name="point_reason_not_sufficient">
        Because you checked in too early or too late, you didn\'t receive full points. Try checking
        in shortly before departure or while travelling.
    </string>
    <string name="point_reason_forced">
        Because you forced this check-in, you received 0 points.
    </string>
    <string name="title_share">Share</string>
    <string name="version_with_code" translatable="false">v%1$s (%2$d)</string>
    <string name="or">or</string>
    <string name="login_oauth">Login with Träwelling</string>
    <string name="other_operators">Other operators</string>
    <string name="private_profile">Private profile</string>
    <string name="follow">Follow</string>
    <string name="request_follow">Request follow</string>
    <string name="request_follow_pending">Request pending</string>
    <string name="unfollow">Unfollow</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="welcome">Welcome!</string>
    <string name="account_notice">To use Träwelldroid, you are required to have created an account with Träwelling. If you have one already, just sign in by clicking the button below. Otherwise you can create an account there.</string>
    <string name="status_invisible">This status is invisible for you.</string>
    <string name="send_toot">Share this check-in on Mastodon</string>
    <string name="chain_toot">Chain this toot to the last tooted Mastodon post</string>
    <string name="settings_check_in_providers">Check-in providers</string>
    <string name="settings_check_in_providers_description">You can manage your check-in providers.</string>
    <string name="open_with_bahnexpert">Open with <b>bahn.expert</b></string>
    <string name="finish">Finish</string>
    <string name="force_check_in">Force check-in</string>
    <string name="share_text">I\'m currently travelling with %1$s towards %2$s!</string>
    <string name="share_text_with_body" translatable="false">%1$s (\@ %2$s ➡️ %3$s)</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="user_likes_status">\@%1$s likes your check-in!</string>
    <string name="event_suggestion_processed">Your event suggestion was processed!</string>
    <string name="event_suggestion_accepted">Your suggested event \"%1$s\" was accepted.</string>
    <string name="event_suggestion_rejected">Your suggested event \"%1$s\" was rejected.</string>
    <string name="user_followed">\@%1$s is now following you!</string>
    <string name="user_also_on_connection">\@%1$s joined your connection!</string>
    <string name="travelling_with_from_to">Ride with %1$s from %2$s to %3$s</string>
    <string name="follow_request_approved">\@%1$s approved your follow request!</string>
    <string name="follow_request_issued">\@%1$s would like to follow you!</string>
    <string name="mastodon_share_error">Error when sharing to Mastodon!</string>
    <string name="status_not_shared_on_mastodon">Your check-in wasn\'t shared to Mastodon due to error %1$d.</string>
    <string name="map_view">Map view</string>
    <string name="configure_map">Here you can configure the map view.</string>
    <string name="openrailwaymap" translatable="false">OpenRailwayMap</string>
    <string name="standard_layer">Standard</string>
    <string name="standard_description">Visualizes infrastructure like tracks, stations, …</string>
    <string name="signal_layer">Signals</string>
    <string name="signal_description">Visualizes signalling systems, signals, …</string>
    <string name="maxspeed_layer">Maximum speed</string>
    <string name="maxspeed_description">Visualizes maximum speed of a track and speed signals.</string>
    <string name="daily_overview">Daily overview</string>
    <plurals name="journeys">
        <item quantity="one">1 journey</item>
        <item quantity="other">%d journeys</item>
    </plurals>
    <string name="manual_departure">Overwritten departure time</string>
    <string name="manual_arrival">Overwritten arrival time</string>
</resources>