<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/dashboard_fragment">

    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="de.traewelling.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/active_checkins_fragment"
        android:name="de.traewelling.ui.activeCheckins.ActiveCheckinsFragment"
        android:label="@string/title_active_checkins"
        tools:layout="@layout/fragment_active_checkins" />
    <fragment
        android:id="@+id/user_fragment"
        android:name="de.traewelling.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>