<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="de.hbch.traewelling.ui.settings.SettingsFragment" />
        <variable
            name="emojiPickerAdapter"
            type="de.c1710.filemojicompat_ui.views.picker.EmojiPackItemAdapter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_signed_in_as"
                tools:text="@string/signed_in_as"
                loggedInAs="@{fragment.loggedInUserViewModel.username}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"
                style="@style/Theme.Traewelling.StatisticTexts" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_login_expires"
                tools:text="@string/jwt_expiration"
                app:layout_constraintStart_toStartOf="@id/text_view_signed_in_as"
                app:layout_constraintTop_toBottomOf="@id/text_view_signed_in_as"
                jwtExpiration="@{fragment.jwt}"
                android:layout_marginTop="8dp" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/renew_login"
                android:id="@+id/btn_renew_login"
                app:layout_constraintStart_toStartOf="@id/text_view_login_expires"
                app:layout_constraintTop_toBottomOf="@id/text_view_login_expires"
                android:onClick="@{() -> fragment.renewLogin()}"
                android:layout_marginTop="16dp" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/btn_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_renew_login"
                android:onClick="@{() -> fragment.logout()}"
                android:layout_marginEnd="16dp"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/divider_1"
                app:layout_constraintTop_toBottomOf="@id/btn_renew_login"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashtag"
                style="@style/Theme.Traewelling.StatisticTexts"
                android:id="@+id/title_hashtag"
                app:layout_constraintStart_toStartOf="@id/btn_renew_login"
                app:layout_constraintTop_toBottomOf="@id/divider_1"
                android:layout_marginTop="16dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_hashtag_text"
                android:layout_marginTop="8dp"
                android:id="@+id/text_view_explanation_hashtag"
                app:layout_constraintStart_toStartOf="@id/title_hashtag"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/title_hashtag" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_hashtag"
                app:layout_constraintStart_toStartOf="@id/title_hashtag"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_view_explanation_hashtag"
                app:startIconDrawable="@drawable/ic_hashtag"
                android:hint="@string/hashtag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_hashtag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_hashtag"
                android:id="@+id/btn_store_hashtag"
                app:layout_constraintEnd_toEndOf="@id/text_input_hashtag"
                app:layout_constraintTop_toBottomOf="@id/text_input_hashtag"
                android:onClick="@{() -> fragment.storeHashtag()}"
                android:layout_marginTop="8dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/divider_2"
                app:layout_constraintTop_toBottomOf="@id/btn_store_hashtag"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emoji"
                style="@style/Theme.Traewelling.StatisticTexts"
                android:id="@+id/title_emoji"
                app:layout_constraintStart_toStartOf="@id/btn_renew_login"
                app:layout_constraintTop_toBottomOf="@id/divider_2"
                android:layout_marginTop="16dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/emoji_text"
                android:layout_marginTop="8dp"
                android:id="@+id/text_view_explanation_emoji"
                app:layout_constraintStart_toStartOf="@id/title_emoji"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/title_emoji" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/emoji_prefs"
                app:layout_constraintStart_toStartOf="@id/title_emoji"
                app:layout_constraintTop_toBottomOf="@id/text_view_explanation_emoji"
                app:layout_constraintEnd_toEndOf="@id/btn_store_hashtag"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:adapter="@{emojiPickerAdapter}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>