<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginActivity"
            type="de.hbch.traewelling.ui.login.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        style="@style/Theme.Traewelling.PrimaryColorBackground"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:text="@string/account_notice"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#C72730"
            android:onClick="@{() -> loginActivity.initiateOAuthPKCELogin()}"
            android:text="@string/login_oauth"
            android:textColor="@color/white"
            app:icon="@drawable/ic_popup"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_notice" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> loginActivity.showInfoActivity()}"
            android:text="@string/information"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>