<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="de.hbch.traewelling.ui.statistics.StatisticsViewModel" />
        <variable
            name="statisticsFragment"
            type="de.hbch.traewelling.ui.statistics.StatisticsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.statistics.StatisticsFragment">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/select_date_range"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            dateRange="@{viewModel.dateRange}"
            tools:text="@string/date_range"
            app:icon="@drawable/ic_calendar"
            android:onClick="@{() -> statisticsFragment.selectDateRange()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/chip_group_statistic_selection_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_date_range"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_statistics_check_ins"
                android:checked="true"
                android:text="@string/check_in_count" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_statistics_travel_time"
                android:text="@string/travel_time" />

        </com.google.android.material.chip.ChipGroup>



        <com.google.android.material.chip.ChipGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/chip_group_statistic_selection_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_statistic_selection_type"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_statistics_travel_types"
                android:checked="true"
                android:text="@string/transport_types" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_statistics_operators"
                android:text="@string/operators" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/layout_chart_product_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_statistic_selection_data"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>